--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,16 @@
 <h1>Burgers!</h1>
 
-<h2>Burgers not eaten:</h2>
+<h2>Burgers Not Eaten:</h2>
 <ul>
     {{#each burgers}}
     {{#unless devoured}}
     <li>
         {{burger_name}}
-        <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+        <form action="api/burgers/{{this.id}}?_method=PUT" method="POST">
             <input type="hidden" name="devoured" value="1">
             <button type="submit">Eat!</button>
         </form>
-        <form action="burgers/delete/{{this.id}}?_method=DELETE" method="POST">
+        <form action="api/burgers/{{this.id}}?_method=DELETE" method="POST">
             <button type="submit">Delete</button>
         </form>
     </li>
@@ -24,7 +24,20 @@
     {{#if devoured}}
     <li>
         {{burger_name}}
+        <form action="api/burgers/{{this.id}}?_method=PUT" method="POST">
+            <input type="hidden" name="devoured" value="0">
+            <button type="submit">Switch</button>
+        </form>
     </li>
     {{/if}}
     {{/each}}
 </ul>
+
+<h2>Add a Burger</h2>
+<form action="api/burgers" method="POST">
+    <div class="form-group">
+        <label>Burger Name:</label>
+        <input type="text" name="burger_name">
+    </div>
+    <button type="submit">Add Burger</button>
+</form>
